# DroidZbar

./: README.md  settings.gradle
example/: build.gradle
example/src/androidTest/java/com/mosect/android/droidzbar/example/: ExampleInstrumentedTest.java
example/src/main/: AndroidManifest.xml
example/src/main/java/com/mosect/android/droidzbar/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
example/src/main/res/values/: strings.xml
example/src/test/java/com/mosect/android/droidzbar/example/: ExampleUnitTest.java
zbar/: CMakeLists.txt  build.gradle
zbar/src/androidTest/java/net/sourceforge/zbar/: ExampleInstrumentedTest.java
zbar/src/main/: AndroidManifest.xml
zbar/src/main/java/com/mosect/android/droidzbar/: DataHandler.java  SafeScanner.java  ScanCallback.java  ScanHandler.java  Scanner.java  SwapBuffer.java
